Fixed hamburger/full menu scroll defect on mobile

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -906,7 +906,7 @@ p {
     height: 100%;
     left: 0;
     margin-top: 125px;
-    padding-top: 125px;
+    padding-top: 62.5px;
     position: fixed;
     text-align: center;
     top: 0;
@@ -916,7 +916,11 @@ p {
   .navbar .navbar-nav li a {
     color: #ffffff;
     display: block;
+    font-size: 2.5rem;
     padding: 20px 0;
+  }
+  .navbar-open {
+    overflow: hidden;
   }
   .navbar-open .navbar .navbar-hamburger:hover span:after,
   .navbar-open .navbar .navbar-hamburger:hover span:before {
@@ -945,6 +949,7 @@ p {
     animation: animate-in 0.5s 1;
     opacity: 1;
     z-index: 999;
+    overflow-y: scroll;
   }
   .navbar-closed .navbar .navbar-nav {
     animation: animate-out 0.5s 1;
