--- a/assets/less/component/nav.less
+++ b/assets/less/component/nav.less
@@ -89,7 +89,7 @@
             height: 100%;
             left: 0;
             margin-top: @navbar-height;
-            padding-top: @navbar-height;
+            padding-top: @navbar-height / 2;
             position: fixed;
             text-align: center;
             top: 0;
@@ -99,6 +99,7 @@
                 a {
                     color: @xena-white;
                     display: block;
+                    font-size: 2.5rem;
                     padding: 20px 0;
                 }
             }
@@ -107,6 +108,7 @@
 
     // Show full-screen menu
     .navbar-open {
+        overflow: hidden; // Disable scroll on body
         .navbar {
             .navbar-hamburger {
                 &:hover {
@@ -132,6 +134,7 @@
                 animation: animate-in 0.5s 1;
                 opacity: 1;
                 z-index: 999;
+                overflow-y: scroll; // Enable scroll on menu
             }
         }
     }
